[gd_scene load_steps=5 format=3 uid="uid://7osaj5fvab7w"]

[ext_resource type="Script" uid="uid://c4ljpwbal8e4j" path="res://scripts/result.gd" id="1_6arnk"]
[ext_resource type="Texture2D" uid="uid://7yh52if30fe7" path="res://assets/backgrounds/result_background.png" id="2_6pwfk"]
[ext_resource type="Texture2D" uid="uid://c426vhh75mkl5" path="res://assets/moth_parts/sample_moth.png" id="3_8dhx7"]
[ext_resource type="Theme" uid="uid://2u73dho8wklv" path="res://assets/ui/pixel_ui_theme.tres" id="4_7llif"]

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6arnk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_6pwfk")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="name_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Your moth name here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="blurb_label" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
text = "A short description of your moth"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="moth_image" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_8dhx7")
expand_mode = 5
stretch_mode = 5

[node name="restart_button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_7llif")
text = "Play Again?"
icon_alignment = 1

[node name="trait_list" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
